--- a/site/draft.html
+++ b/site/draft.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Question:</h1> 
         <form action="" method="post">
-            <textarea name="question-textarea" rows="4" cols="50"></textarea>
+            <textarea name="draft-textarea" rows="4" cols="50"></textarea>
             <div>
                 <input type="submit" value="Submit Question"/>
             </div>
