--- a/site/question.html
+++ b/site/question.html
@@ -8,10 +8,12 @@
     </head>
     <body>
         <h1>Question:</h1> 
+        <p>#{id}</p>
+        <h1>Response:</h1> 
         <form action="" method="post">
-            <textarea name="question-textarea" rows="4" cols="50"></textarea>
+            <textarea name="response-textarea" rows="4" cols="50"></textarea>
             <div>
-                <input type="submit" value="Submit Question"/>
+                <input type="submit" value="Submit"/>
             </div>
         </form>
     </body>
