--- a/site/draft.html
+++ b/site/draft.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -7,12 +7,16 @@
         <link href="style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <h1>Question:</h1> 
-        <form action="" method="post">
-            <textarea name="question-textarea" rows="4" cols="50"></textarea>
-            <div>
-                <input type="submit" value="Submit Question"/>
+        <div id="content" class="question-content">
+            <h1>Question:</h1>
+            <form action="" method="post">
+                <input name="question-textarea">
+               <!-- <textarea name="draft-textarea" rows="4" cols="50"></textarea> -->
+                <br><br><br>
+                <div>
+                    <input class="button" type="submit" value="Submit Question" />
+                </div>
+            </form>
             </div>
-        </form>
     </body>
 </html> 
