--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-        <link href="style.css" rel="stylesheet" type="text/css"/>
-    </head>
-    <body>
-        <h1>App Title</h1>
-        <p><a href="draft">Create a question!</a></p> 
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Metis</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+    <div id="content" class="homepage-content">
+        <h1 class="title">Metis</h1>
+
+        <p><a class=button href="draft">Create Forum</a></p>
+    </div>
+</body>
 </html>
+
+
